fixed an error with images stretching too far

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -60,6 +60,6 @@ h2 {
     }
     img{
         height: 100px;
-        width: max-content;
+        max-width: 90%;
     }
 }
